--- a/app/src/main/res/layout/activity_main_tao_bcdoanhthu.xml
+++ b/app/src/main/res/layout/activity_main_tao_bcdoanhthu.xml
@@ -169,6 +169,31 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="@drawable/cell_shape"
+                            android:text="Doanh thu bán nợ:"
+                            android:textSize="@dimen/muoi" />
+
+                        <TextView
+                            android:id="@+id/tvdoanhthubanno"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/cell_shape"
+                            android:textAlignment="textEnd"
+                            android:textColor="@android:color/holo_red_light"
+                            android:textSize="@dimen/muoi" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/cell_shape"
                             android:text="Giảm giá:"
                             android:textSize="@dimen/muoi" />
 
