--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -60,7 +60,7 @@
     <!--<color name="ipuple">#d2a3ed</color>-->
 
     <color name="iblue">#66a9f9</color>
-    <color name="igreen">#4ddca3</color>
+    <color name="igreen">#6ebf4b</color>
     <color name="ired">#f56775</color>
     <color name="icyan">#00D6FF</color>
     <color name="iorange">#f9ae6e</color>
