--- a/app/src/main/res/layout/activity_main_addkho.xml
+++ b/app/src/main/res/layout/activity_main_addkho.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/parentLayout"
     android:layout_height="match_parent"
-    tools:context="com.example.windows10gamer.connsql.Xuat_Nhap.Main_Taoxuat">
+    android:fitsSystemWindows="true"
+    tools:context="com.example.windows10gamer.connsql.Kho.Main_AddKho">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,23 +18,66 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:padding="10dp"
-            android:text="Tạo đơn xuất hàng"
+            android:text="Nhập hàng"
             android:textAlignment="center"
             android:textColor="#fff"
             android:textSize="@dimen/tie"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
 
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="3dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp"
-            android:text="Nhân viên xuất:"
-            android:textSize="@dimen/muoi" />
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:text="Chọn chi nhánh đang Kiểm kho:"
+                android:textSize="@dimen/muoi" />
+
+            <Spinner
+                android:id="@+id/spinnerKiemkho"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/bg_sn"
+                android:padding="5dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
+
+            <RadioGroup
+                android:id="@+id/rgkho"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rbkhomoi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Kho mới"
+                    android:textSize="@dimen/hai" />
+
+                <RadioButton
+                    android:id="@+id/rbkholoi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Kho lỗi"
+                    android:textSize="@dimen/hai" />
+            </RadioGroup>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,7 +96,7 @@
                     android:id="@+id/ivAvatar"
                     android:layout_width="65dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_user2"
+                    app:srcCompat="@drawable/ic_user2"
                     app:civ_border_color="@color/colorMain"
                     app:civ_border_width="0.5dp" />
             </LinearLayout>
@@ -84,7 +130,7 @@
                             android:paddingLeft="10dp">
 
                             <TextView
-                                android:id="@+id/tvTaoxuatmaNV"
+                                android:id="@+id/tvScanManhanvien"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textColor="#000"
@@ -100,7 +146,7 @@
                             android:paddingLeft="10dp">
 
                             <TextView
-                                android:id="@+id/tvTaoxuattenNV"
+                                android:id="@+id/tvScanTennhanvien"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -129,7 +175,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/tvchinhanh"
+                            android:id="@+id/tvchinhanhkiemkho"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:paddingBottom="5dp"
@@ -147,163 +193,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/colorMain" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="Nhân viên nhận:"
-            android:textSize="@dimen/muoi" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/ivAvatar2"
-                    android:layout_width="65dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_user2"
-                    app:civ_border_color="@color/colorMain"
-                    app:civ_border_width="0.5dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="7"
-                android:orientation="vertical"
-                android:paddingRight="10dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/bg125"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <Spinner
-                            android:id="@+id/spChange"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/bg_sn"></Spinner>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="10">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/bg125"
-                        android:gravity="center_vertical|center_horizontal"
-                        android:orientation="vertical">
-
-                        <Spinner
-                            android:id="@+id/spinnerTaoxuat"
-                            android:layout_width="match_parent"
-                            android:layout_height="25dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/bg_sn"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="5dp" />
-
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_margin="10dp"
             android:background="@color/colorMain" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
             android:orientation="horizontal"
-            android:weightSum="10">
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:gravity="center_horizontal|center">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Ghi chú:"
-                    android:textSize="@dimen/muoi" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="7"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
-
-                <EditText
-                    android:id="@+id/edTaoxuatghichu"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_edittext"
-                    android:padding="5dp"
-                    android:textSize="@dimen/sau" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
             android:weightSum="3">
 
             <TextView
@@ -319,11 +218,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_horizontal"
+                android:gravity="center_horizontal|end"
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnScanTaoxuat"
+                    android:id="@+id/btnScan"
                     android:layout_width="65dp"
                     android:layout_height="30dp"
                     android:layout_below="@+id/tv_blog_url"
@@ -343,31 +242,37 @@
 
 
         <TextView
-            android:id="@+id/tvChuaco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="Chưa có sản phẩm"
-            android:textAlignment="center" />
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+
+            android:text="Danh sách sản phẩm"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/colorMain"
+            android:textSize="@dimen/hai" />
 
         <ListView
-            android:id="@+id/lvtaoxuat"
+            android:id="@+id/lvScan"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/muoi"
-            android:layout_marginRight="@dimen/muoi"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/list_border"
-            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/btnScan"
             tools:layout_editor_absoluteX="19dp" />
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabTaoxuat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/stat_sys_upload"
-        app:backgroundTint="@color/RED" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom|end"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+        android:paddingRight="10dp"
+        android:visibility="visible">
+
+    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
