--- a/app/src/main/res/layout/activity_main_order.xml
+++ b/app/src/main/res/layout/activity_main_order.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/parentLayout"
@@ -141,7 +141,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_business_report"
-        app:backgroundTint="@color/RED" />
+        app:backgroundTint="@color/RED"
+        app:srcCompat="@drawable/ic_list1" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
